--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <h1><a href="index.html">Hori<span class="seo">seo</span>n</a></h1>
         <nav>
             <ul>
                 <li>
@@ -20,6 +20,9 @@
                 </li>
                 <li>
                     <a href="#social-media-marketing">Social Media Marketing</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact Us</a>
                 </li>
             </ul>
         </nav>
@@ -72,7 +75,7 @@
         </section>
     </aside>
     <footer>
-        <h2>Made with ❤️️ by Horiseon</h2>
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
