--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./assets/css/contactstyle.css">
     <title>Horiseon - Contact Us</title>
 </head>
+
 <body>
     <header>
         <h1><a href="index.html">Hori<span class="seo">seo</span>n</a></h1>
