Added comments to the code

--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <h1><a href="index.html">Hori<span class="seo">seo</span>n</a></h1>
+        <!-- simplified the nav bar to just include a return home option to take you back to the home page. You can also click on the logo in the code above -->
         <nav>
             <ul>
                 <li>
@@ -20,6 +21,7 @@
     </header>
     <main>
         <h2>Contact Form:</h2>
+        <!-- Contact Form code: First Name, Last Name, Email, and Message sections (in order) -->
         <form>
             <label class="box-label" for="fname">First Name</label><br>
             <input class="input-box" type="text" id="fname" name="firstname" placeholder="Your first name..."><br>
