--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 <body>
     <header>
+        <!-- Clicking on logo will link to this main page -- more relevant for contact page -->
         <h1><a href="index.html">Hori<span class="seo">seo</span>n</a></h1>
+        <!-- Navigation Bar code -- in-page links to sections below. Contact link to new HTML page contact.html -->
         <nav>
             <ul>
                 <li>
@@ -22,6 +24,7 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
                 <li>
+                    <!-- To new HTML page -->
                     <a href="contact.html">Contact Us</a>
                 </li>
             </ul>
@@ -29,6 +32,7 @@
     </header>
     <div class="hero" title="Business meeting with four people discussing search engine optimization documents."></div>
     <main class="content">
+        <!-- Content sections on the left side of the screen including pictures and descriptions-->
         <section id="search-engine-optimization" class="content-section">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Notes on search engine optimization. Topics include: link building, social media, mobile compatibility, headings, content, and backlink." class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -52,6 +56,7 @@
         </section>
     </main>
     <aside class="benefits">
+        <!-- Right side sections with icons.-->
         <section class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Icon of machine gears funneling into money." />
